# pastehop

./: Cargo.toml  LICENSE  PRODUCT_SPEC.md  README.md  config.example.toml  install.sh
.github/workflows/: release.yml
assets/iterm2/: pastehop.py
assets/kitty/: bridge.sh  managed_block.conf  pastehop.py
assets/wezterm/: managed_block.lua
docs/: PLAN.md  PRODUCT_SPEC.md  iterm2.md  kitty.md
src/: app.rs  cli.rs  clipboard.rs  config.rs  doctor.rs  errors.rs  gc.rs  hook.rs  install.rs  main.rs  naming.rs  profiles.rs  staging.rs  target.rs  transport.rs
src/terminal/: iterm2.rs  kitty.rs  mod.rs  wezterm.rs
