[package]
name = "pastehop"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ph"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
arboard = "3.6.1"
clap = { version = "4.5.53", features = ["derive"] }
image = { version = "0.25.8", default-features = false, features = ["png"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tempfile = "3.23.0"
thiserror = "2.0.17"
time = { version = "0.3.44", features = ["formatting", "local-offset", "macros"] }
toml = "0.9.8"
which = "8.0.0"
