[package]
name = "pastehop"
version = "0.1.0"
edition = "2024"
description = "Paste local images and files into remote terminal AI agent sessions over SSH"
license = "MIT"
repository = "https://github.com/shantanugoel/pastehop"
homepage = "https://github.com/shantanugoel/pastehop"
readme = "README.md"
keywords = ["clipboard", "ssh", "paste", "terminal", "remote"]
categories = ["command-line-utilities", "development-tools"]

exclude = ["docs/"]

[[bin]]
name = "ph"
path = "src/main.rs"

[dependencies]
anyhow = "1"
arboard = "3.6"
clap = { version = "4.5", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3.27"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "local-offset", "macros"] }
toml = "1.0"
which = "8.0"
